--- a/application/views/orcamentos_inserir.phtml
+++ b/application/views/orcamentos_inserir.phtml
@@ -12,9 +12,7 @@
         }); 
     </script>
 
-
 </head>
-
 
 <body>
     <?php echo form_open('orcamentos/inserir', 'id="form-orcamentos"'); ?>
@@ -45,7 +43,7 @@
          <div class="form-group col-md-5">
             <label for="orcdat">Data</label> <input type="text" class="form-control" id="orcdat" name="orcdat"
                 placeholder="informe a data"
-                value="<?php echo date('d/m/y') ; ?>">
+                value="<?php echo date('Y-m-d') ; ?>">
         </div>
         <div class="form-group col-md-5">
             <label for="situacao">Situação</label> <input type="text" class="form-control" id="situacao" name="situacao"
