soma dos campos na pagina de orçamentos

--- a/application/views/clientes_lista.phtml
+++ b/application/views/clientes_lista.phtml
@@ -131,7 +131,7 @@
         <?php echo $pagination; ?>
       </div>
       <div class="col-sm-2" >
-        <a class="btn btn-primary btn-sm" download="somedata.xls" href="#" 
+        <a class="btn btn-primary btn-sm" download="relatorio de clientes.xls" href="#" 
         onclick="return ExcellentExport.excel(this, 'clientes', 'relatorio');">Export to Excel</a>
       </div>
 
