--- a/application/views/clientes_lista.phtml
+++ b/application/views/clientes_lista.phtml
@@ -123,6 +123,7 @@
 				</tbody>
 			</table>
 			 <h3><?php echo $this->session->flashdata('mensagem');?></h3>
+        <h3><?php echo $this->session->flashdata('mensagemErro');?></h3>
 		</div>
 	</div>	
 
