--- a/application/views/orcamentos_lista.phtml
+++ b/application/views/orcamentos_lista.phtml
@@ -206,14 +206,13 @@
           <form action="" method="GET" ENCTYPE="multipart/form-data">
             <div class="row">
               <div class="form-group col-md-5">
-                  <label for="cliente">Nome do cliente</label> <input type="text" class="form-control" id="cliente" name="nomeC"
-                      placeholder="informe o nome da empresa/cliente"
+                  <label for="cliente">Nome do cliente</label> <input type="text" class="form-control" id="cliente" name="nomeC" required placeholder="informe o nome da empresa/cliente"
                       value="<?php echo isset($view_cliente) ? $view_cliente: '' ; ?>">
               </div>     
 
               <div class="form-group col-md-5">
                   <label for="produto">Produto</label> <input type="text" class="form-control" id="produto" 
-                  name="nomeP" placeholder="informe o produto principal"
+                  name="nomeP" required placeholder="informe o produto principal"
                       value="<?php echo isset($view_produto) ? $view_produto: '' ; ?>">
               </div>
           </div>
@@ -222,11 +221,10 @@
            <div class="row">
                <div class="form-group col-md-5">
                   <label for="orcdat">Data</label> <input type="text" class="form-control" id="orcdat" name="orcdat"
-                      placeholder="informe a data"
-                      value="<?php echo date('Y-m-d') ; ?>">
+                      placeholder="informe a data" required value="<?php echo date('Y-m-d') ; ?>">
               </div>
               <div class="form-group col-md-5">
-                  <label for="situacao">Situação</label> <input type="text" class="form-control" id="situacao" name="situacao" placeholder="informe a Situação"
+                  <label for="situacao">Situação</label> <input type="text" class="form-control" id="situacao" name="situacao" placeholder="informe a Situação" required
                       value="<?php echo isset($view_situacao) ? $view_situacao : '' ; ?>">
               </div>
           </div>
@@ -234,13 +232,13 @@
           <div class="row">
                	<div class="form-group col-md-5">
                   <label for="valor">Valor</label> <input type="text" class="form-control" id="valor" name="valor"
-                      placeholder="informe o valor"
+                      placeholder="informe o valor" required
                       value="<?php echo isset($view_valor) ? $view_valor : '' ; ?>">
              	</div>
 
              	<div class="form-group col-md-5">
-                  	<label for="numero">Numero</label> <input type="text" class="form-control" id="numero" name="numero"
-                    placeholder="informe o numero do orçamento"
+                  	<label for="numero">Numero</label> <input type="text" class="form-control" id="numero" 
+                    name="numero" required placeholder="informe o numero do orçamento"
                     value="<?php echo isset($view_numero) ? $view_numero : '' ; ?>">
              		</div>
               
@@ -278,7 +276,7 @@
         <form action="" method="post" ENCTYPE="multipart/form-data">
           <div class="row">
             <div class="form-group col-md-6">
-                <label for="nomeEvento">Nome Cliente</label> <input type="text" class="form-control" id="nomeEvento" name="nomeEvento" placeholder="informe o nome do cliente"
+                <label for="nomeEvento">Nome Cliente</label> <input type="text" class="form-control" id="nomeEvento" name="nomeEvento" placeholder="informe o nome do cliente" required
                 value="<?php echo isset($view_enome) ? $view_enome: '' ; ?>">
             </div>  
 
@@ -288,24 +286,32 @@
             </div>
           </div> 
 
-          <div class="row"> 
+            <div class="row"> 
+            <div class="col-md-6">
+              <label for="inicio">Data</label>
+            </div>
+            <div class="col-md-6">
+              <label for="importancia">Prioridade</label>
+            </div>
             <div class="form-group col-md-6">
               <div class="input-group date">
-                <input type="text" class="form-control date" id="inicio" name="inicio" placeholder="Data de inicio"
-                    value="<?php echo isset($view_inicio) ? $view_inicio: '' ; ?>">
+                <input type="text" class="form-control date" id="inicio" name="inicio"  required
+                placeholder="Data de inicio" value="<?php echo isset($view_inicio) ? $view_inicio: '' ; ?>">
                 <div class="input-group-addon">
                   <span class="glyphicon glyphicon-th"></span>
                 </div>
               </div>
             </div>
             <div class="form-group col-md-6">
-                <label for="importancia">Prioridade</label> <input type="text" class="form-control" id="importancia" name="importancia" placeholder="informe a prioridade" value="<?php echo isset($view_importancia) ? $view_importancia: '' ; ?>">
+                 <input type="text" class="form-control" id="importancia" name="importancia" 
+                 required placeholder="informe a prioridade" 
+                 value="<?php echo isset($view_importancia) ? $view_importancia: '' ; ?>">
             </div>
           </div>
 
            <div class="row"> 
             <div class="form-group col-md-12">
-              <label for="descricaoEvento">Descrição</label> <input type="text" class="form-control" id="descricaoEvento" name="descricaoEvento" placeholder="descreva a tarefa"
+              <label for="descricaoEvento">Descrição</label> <input type="text" class="form-control" id="descricaoEvento" name="descricaoEvento" placeholder="descreva a tarefa" required
                 value="<?php echo isset($view_descricaoEvento) ? $view_descricaoEvento: '' ; ?>">
             </div> 
            </div>
