--- a/application/views/produtos_lista.phtml
+++ b/application/views/produtos_lista.phtml
@@ -94,13 +94,15 @@
     <form action="" method="post" ENCTYPE="multipart/form-data">
       <div class="row">
         <div class="form-group col-md-5">
-            <label for="pnome">Nome do Produto</label> <input type="text" class="form-control" id="pnome" name="pnome"
-                placeholder="informe o nome do Produto"
+            <label for="pnome">Nome do Produto</label> 
+            <input type="text" class="form-control" id="pnome" name="pnome"
+                placeholder="informe o nome do Produto" required
                 value="<?php echo isset($view_pnome) ? $view_pnome: '' ; ?>">
         </div>     
         <div class="form-group col-md-5">
-            <label for="nome">Descrição</label> <input type="text" class="form-control" id="descricao" name="descricao"
-                placeholder="informe uma Descrição do produto"
+            <label for="nome">Descrição</label> 
+            <input type="text" class="form-control" id="descricao" name="descricao" 
+                placeholder="informe uma Descrição do produto" required
                 value="<?php echo isset($view_descricao) ? $view_descricao: '' ; ?>">
         </div>
     </div>
