--- a/application/views/clientes_edit.phtml
+++ b/application/views/clientes_edit.phtml
@@ -11,12 +11,14 @@
  	<div class="row">
         <div class="form-group col-md-5">
 			<label for="cnome">Nome:</label><br/>
-			<input type="text" class="form-control" name="cnome" value="<?php echo $dados_cliente[0]->cnome; ?>"/>
+			<input type="text" class="form-control" name="cnome" 
+				value="<?php echo $dados_cliente[0]->cnome; ?>"/>
 			<div class="error"><?php echo form_error('cnome'); ?></div>
 		</div> 	
 		<div class="form-group col-md-5">
 			<label for="nome">Contato:</label><br/>
-			<input type="text" class="form-control" name="contato" value="<?php echo $dados_cliente[0]->contato; ?>"/>
+			<input type="text" class="form-control" name="contato" 
+				value="<?php echo $dados_cliente[0]->contato; ?>"/>
 			<div class="error"><?php echo form_error('contato'); ?></div>
 		</div>	
 
