--- a/application/views/clientes_lista.phtml
+++ b/application/views/clientes_lista.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -107,7 +107,7 @@
                     href="<?php echo base_url() . 'clientes/inserir_coment/' . $cliente->ccod; ?>"></a>
                 <a title="orçamentos" class="btn btn-default btn-xs" 
                     href="<?php echo base_url() . 'orcamentos/inserir/' . $cliente->ccod; ?>">Orç</a>
-                <a title="Editar" class="btn btn-warning btn-sm fa fa-pencil-square-o" 
+                <a title="Editar" class="btn btn-warning btn-sm fa fa-pencil-square-o"
                     href="<?php echo base_url() . 'clientes/editar/' . $cliente->ccod; ?>"></a>
                 <a title="Deletar" class="btn btn-danger btn-sm fa fa-trash" 
                     href="<?php echo base_url() . 'clientes/deletar/' . $cliente->ccod; ?>" onclick="return confirm('Confirma a exclusço deste registro?')"></a>
@@ -131,7 +131,6 @@
         <a class="btn btn-primary btn-sm" download="relatorio de clientes.xls" href="#" 
         onclick="return ExcellentExport.excel(this, 'clientes', 'relatorio');">Export to Excel</a>
       </div>
-
     </div>
 
 
