--- a/application/views/orcamentos_edit.phtml
+++ b/application/views/orcamentos_edit.phtml
@@ -30,11 +30,20 @@
 			<input type="text" class="form-control" name="orcdat" value="<?php echo $dados_orcamentos[0]->orcdat; ?>"/>
 			<div class="error"><?php echo form_error('orcdat'); ?></div>
 		</div>
-		<div class="form-group col-md-5">
-			<label for="situacao">Situação:</label><br/>
-			<input type="text" class="form-control" name="situacao" value="<?php echo $dados_orcamentos[0]->situacao; ?>"/>
-			<div class="error"><?php echo form_error('situacao'); ?></div>
-		</div> 
+
+		<div class="form-group col-md-6">
+		<label for="situacao">Situação:</label><br/>
+	        <div class="col-md-3">
+	          <input type="radio" name="situacao" value="Quente" checked> Quente<br>
+	        </div>
+	        <div class="col-md-2">
+	          <input type="radio" name="situacao" value="Frio"> Frio<br>
+	        </div>
+	        <div class="col-md-3">
+	          <input type="radio" name="situacao" value="Parado"> Parado<br>
+	        </div>
+        </div>
+
 	</div>
 
 	<div class="row">
