--- a/application/views/orcamentos_inserir.phtml
+++ b/application/views/orcamentos_inserir.phtml
@@ -46,9 +46,16 @@
                 value="<?php echo date('Y-m-d') ; ?>">
         </div>
         <div class="form-group col-md-5">
-            <label for="situacao">Situação</label> <input type="text" class="form-control" id="situacao" name="situacao"
-                placeholder="informe a Situação"
-                value="<?php echo isset($view_situacao) ? $view_situacao : '' ; ?>">
+            <label for="situacao">Situação</label></br>
+                <div class="col-md-3">
+                  <input type="radio" name="situacao" value="Quente" checked> Quente<br>
+                </div>
+                <div class="col-md-2">
+                  <input type="radio" name="situacao" value="Frio"> Frio<br>
+                </div>
+                <div class="col-md-3">
+                  <input type="radio" name="situacao" value="Parado"> Parado<br>
+                </div>
         </div>
     </div>
 
