--- a/application/views/produtos_lista.phtml
+++ b/application/views/produtos_lista.phtml
@@ -42,6 +42,11 @@
 				<button class="btn btn-primary btn-sm pull-left" type="submit">Filtrar</button>
 			</div>
 
+      <div class="col-sm-2">
+        <a data-toggle="modal" data-target="#new_produto" class="btn btn-primary btn-sm ">Novo Produto</a>
+      </div>
+      
+
 		</form>
 
 	</div>
