--- a/application/views/clientes_inserir_coment.phtml
+++ b/application/views/clientes_inserir_coment.phtml
@@ -24,7 +24,7 @@
     <form action="" method="post" ENCTYPE="multipart/form-data">
       <div class="row">
         <div class="form-group col-md-5">
-            <label for="nome">Data</label> <input type="text" class="form-control" id="dat" name="dat"
+            <label for="nome">Data</label> <input type="text" class="form-control" id="comentdate" name="comentdate"
                 placeholder="informe uma data " 
                 value="<?php echo date('d/m/y') ; ?>">
         </div>     
