--- a/application/views/orcamentos_edit.phtml
+++ b/application/views/orcamentos_edit.phtml
@@ -9,13 +9,13 @@
 	<input type="hidden" name="produto" value="<?php echo $dados_orcamentos[0]->produto; ?>"/>
  	
  	<div class="row">
-        <div class="form-group col-md-5">
+        <div class="form-group col-md-6">
 			<label for="cliente">Cliente:</label><br/>
 			<input type="text" class="form-control" name="clienteNome" readonly 
 				value="<?php echo $dados_orcamentos[0]->cnome; ?>"/>
 			<div class="error"><?php echo form_error('cliente'); ?></div>
 		</div> 	
-		<div class="form-group col-md-5">
+		<div class="form-group col-md-6">
 			<label for="produto">Produto:</label><br/>
 			<input type="text" class="form-control" name="produtoNome" readonly
 				value="<?php echo $dados_orcamentos[0]->pnome; ?>"/>
@@ -25,10 +25,10 @@
 	</div>
 
 	<div class="row">
-        <div class="form-group col-md-5">
-			<label for="orcdat">Data:</label><br/>
-			<input type="text" class="form-control" name="orcdat" value="<?php echo $dados_orcamentos[0]->orcdat; ?>"/>
-			<div class="error"><?php echo form_error('orcdat'); ?></div>
+        <div class="form-group col-md-6">
+			<label for="orcdate">Data:</label><br/>
+			<input type="text" class="form-control" name="orcdate" value="<?php echo $dados_orcamentos[0]->orcdate; ?>"/>
+			<div class="error"><?php echo form_error('orcdate'); ?></div>
 		</div>
 
 		<div class="form-group col-md-6">
@@ -47,19 +47,32 @@
 	</div>
 
 	<div class="row">
-        <div class="form-group col-md-5">
-			<label for="valor">Valor:</label><br/>
-			<input type="text" class="form-control" name="valor" value="<?php echo number_format($dados_orcamentos[0]->valor,0,",","."); ?>"/>
-			<div class="error"><?php echo form_error('orcdat'); ?></div>
-		</div> 
-		<div class="form-group col-md-5">
-			<label for="valor">Numero do orçamento:</label><br/>
-			<input type="text" class="form-control" name="numero" 
-			value="<?php echo $dados_orcamentos[0]->numero; ?>"/>
-			<div class="error"><?php echo form_error('numero'); ?></div>
-		</div>
-	</div>
+            <div class="form-group col-md-6">
+              <label for="valor">Valor</label> 
+              <input type="text" class="form-control" id="valor" name="valor"
+                placeholder="informe o valor" required
+                value="<?php echo isset($view_valor) ? $view_valor : '' ; ?>">
+            </div>
 
+            <div class="form-group col-md-6">
+              <label for="numero">Numero do Orçamento</label> 
+              <input type="text" class="form-control" id="numero" 
+                name="numero" required placeholder="informe o numero do orçamento"
+                value="<?php echo isset($view_numero) ? $view_numero : '' ; ?>">
+            </div>   
+          </div>
+
+          <div class="row">
+            <div class="form-group col-md-6">
+            <label for="autor_show">Autor</label> <input type="text" class="form-control" id="autor_show" 
+            name="autor_show" readonly
+            value="<?php echo $_SESSION['usuario_logado']['username']; ?> "/>
+            </div>
+        
+            <div>
+              <input type="hidden" name="autor" value="<?php echo $_SESSION['usuario_logado']['id'];  ?>"/>
+            </div>
+          </div>
 
  	<div class="row">
         <div class="col-md-12">
