--- a/application/views/orcamentos_lista.phtml
+++ b/application/views/orcamentos_lista.phtml
@@ -130,6 +130,7 @@
 						<th>Valor</th>
 						<th>Numero</th>
             <th>Representante</th>
+            <th>Ativo</th>            
 						<th class="actions">Ações</th>
 					</tr>
 				</thead>
@@ -141,11 +142,15 @@
 							<td><?php echo $orcamento->ocod; ?></td> 
 							<td><?php echo $orcamento->cnome; ?></td>    
 							<td><?php echo $orcamento->pnome; ?></td>
-							<td><?php echo $orcamento->orcdat; ?></td>
+							<td><?php echo $orcamento->orcdate; ?></td>
 							<td><?php echo $orcamento->situacao; ?></td>
 							<td><?php echo 'R$ '.number_format($orcamento->valor,0,",",".");  ?></td>
 							<td><?php echo $orcamento->numero; ?></td>
               <td><?php echo $orcamento->rnome; ?></td>
+              <td class="form-check">
+                <input type="checkbox" class="form-check-input" id="userativo">
+                <label class="form-check-label" for="userativo"></label>
+              </td>
 							<td class="actions">
 								<a title="Editar" class="btn btn-warning btn-sm fa fa-pencil-square-o" href="<?php echo base_url() . 'orcamentos/editar/' . $orcamento->ocod; ?>"></a>
 								<a title="Deletar" class="btn btn-danger btn-sm fa fa-trash" href="<?php echo base_url() . 'orcamentos/deletar/' . $orcamento->ocod; ?>" onclick="return confirm('Confirma a exclusão deste registro?')"></a>
@@ -220,7 +225,7 @@
            <div class="row">
              <div class="form-group col-md-6">
                 <label for="orcdat">Data</label> 
-                <input type="text" class="form-control" id="orcdat" name="orcdat"
+                <input type="text" class="form-control" id="orcdate" name="orcdate"
                   placeholder="informe a data" required value="<?php echo date('Y-m-d') ; ?>">
             </div>
               <div class="form-group col-md-6">
@@ -253,7 +258,18 @@
             </div>   
           </div>
 
-
+          <div class="row">
+            <div class="form-group col-md-5">
+            <label for="autor_show">Autor</label> <input type="text" class="form-control" id="autor_show" 
+            name="autor_show" readonly
+            value="<?php echo $_SESSION['usuario_logado']['username']; ?> "/>
+            </div>
+        
+            <div>
+              <input type="hidden" name="autor" value="<?php echo $_SESSION['usuario_logado']['id'];  ?>"/>
+            </div>
+          </div>
+          
           <div class="row">
             <div class="col-md-12">
               <input type="submit" href="http://localhost/sistema/orcamentos/inserir" 
